--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>This is a test server</h1>
     <input type="text" />
     <button>Click me</button>
-    <h2>Name</h2>
-    <h3>Age</h3>
+    <h2>Results</h2>
+
     <script type="text/javascript" src="public/main.js"></script>
   </body>
 </html>
